fixed css issue with footer going behind the input field

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,9 +47,6 @@ body{
         fill: url(#gr-overlay);
       }
     
-
-
-
 #user-section{
   margin-top: 30px;
 }
@@ -59,18 +56,18 @@ body{
 }
 .choice{
   display: inline-block;
-  border: 2px solid black;
   margin: 5px;
   color: black;
 }
-/* #play-again{
-  /* display: none;
- } */
+ #play-again{
+   display: none;
+ }
 #chat-window{
   background-color: white;
+  border: 1px solid #f2f2f2;
   height: 200px;
   overflow: scroll;
-  color: black;
+  color: #66004d;
   padding: 10px;
 }
 #chat-row{
@@ -81,12 +78,23 @@ body{
   margin-top: 5px;
 }
 
+form {
+  position: relative;
+  z-index: 0;
+}
+
+#send-button {
+  float: right;
+}
+
 button{
   cursor: pointer;
 }
 
 img {
+  clear: both;
   width: 200px;
+  height: 200px;
   cursor: pointer;
 }
 
